Centered BG images, Nav Logo Placement, Header image no longer overlapping address, removed margin from checkbox

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -17,7 +17,7 @@
   .form__label_type_checkbox {
     display: flex;
     justify-content: center;
-    margin-top: 32px;
+    margin: 32px 0 0;
     gap: 12px;
   }
   
