--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,6 +10,7 @@
     background-color: #FFF;
     background-image: url(../images/background_header.svg);
     background-size: cover;
+    background-position: center;
 }
 
 .header__title {
@@ -49,11 +50,12 @@
 .header__footer {
   display: flex;
   margin: auto 0 0;
-  width: 100%;
+  padding: 0;
   align-items: flex-end;
   justify-content: space-between;
   color: #838383;
   list-style-type: none;
+  z-index: 1;
 }
 
 .header__paragraph {
