--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -3,6 +3,7 @@
     background-color: #fff;
     background-image: url(../images/background_menu.svg);
     background-size: cover;
+    background-position: center;
 }
 
 .menu__title {
