--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -7,6 +7,8 @@
   position: relative;
   height: 39px;
   max-width: 105px;
+  left: -50px;
+  top: 0;
 }
 
 .nav__links {
