--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -2,6 +2,7 @@
     background-color: #0a2750;
     background-image: url(../images/background_recipes.svg);
     background-size: cover;
+    background-position: center;
     padding: 100px 80px 215px;
   }
   
